Song archive have switched places with news, menus are in swedish

--- a/assets/arkiv.html
+++ b/assets/arkiv.html
@@ -766,5 +766,64 @@ Crambamboli! :||</p>
 1106 14 82 140<br />
 70 76 64 58 46 82 54 70<br />
 82 64 58 36 22 322</p>
+<br />	
+
+<p>MacKan</p>
+
+
+<p><small>February 17, 2019 at 16:58</small></p>								
+
+
+<p>
+The Stubbperial March<br />
+eller<br />
+Ode an Heinrich
+</p>
+
+<p>Melodi: The Imperial March<br />
+(frivilligt rytmiskt ostinato ad libitum)</p>
+<p>Vem är våran värdinna ikväll?<br />
+Det känns som man bor på ett praktfullt hotell!<br />
+STUBB stubb stu-STUBB stubb stu-stub-u-bubb,<br />
+hela dan på vår klub-u-bubb,<br />
+han varit men sitzar ej själv.</p>
+<br />					
+
+<p>Robert Härkönen</p>
+
+
+<p><small>March 29, 2019 at 16:20</small></p>
+
+
+					<p>Brevet från årsfestveckan<br />
+Melodi: Brevet från kolonien</p>
+<p>Hejsan Spektrum, hejsan andra.<br />
+Dags at Vasagatan vandra.<br />
+Vi har kul på femton barer,<br />
+men blir schasad bort av ilskna kommentarer.</p>
+<p>Ramlar ner för Klubbens trappa.<br />
+Suppoängen blev sextio knappa.<br />
+Svär och gormar: ”Känns som jag dör!”<br />
+Och i morgon återvänder vi till förkör.</p>
+<p>Tar med måtta på fredagskvällen.<br />
+Spiller öl på alla ställen.<br />
+Sedan pünschenprestationen<br />
+nästan hjärtslag ger; jag minskar konsumtionen.</p>
+<p>Glada gäster, i frack och klänning,<br />
+muntra värdar utan spänning.<br />
+En supé till Spektrums ära:<br />
+Mat och dryck och sång, vad mer kan man begära?</p>
+<p>Punsch serveras, spexet spelas.<br />
+På japanska det repeteras.<br />
+I min sångbok tecknar grannen näst<br />
+stygga ritningar och ger sig av till efterfest.</p>
+<p>Dans och beerpong e en fin grej.<br />
+Hela festen spårar ur sig.<br />
+Minnesbilder från kalla gatan,<br />
+”Men till sillis ska ja nog, nä ta mig satan”</p>
+<p>Torra strupar, trötta blickar.<br />
+Desperat vi flaskan slickar.<br />
+Men om jag inte söp så drastiskt,<br />
+kunde firandet ha varit så fantastiskt?</p>
 
 
